--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -19,3 +19,7 @@ Layout/LineLength:
 
 Layout/MultilineMethodCallIndentation:
   EnforcedStyle: indented
+
+Metrics/BlockLength:
+  Exclude:
+    - 'spec/**/*_spec.rb'
